RESOLVED FIXED 259808
Regression: NetworkDataTask's ThreadSafeWeakPtrControlBlock are leaking
https://bugs.webkit.org/show_bug.cgi?id=259808
Summary Regression: NetworkDataTask's ThreadSafeWeakPtrControlBlock are leaking
Chris Dumez
Reported 2023-08-03 16:36:41 PDT
NetworkDataTask's ThreadSafeWeakPtrControlBlock are leaking, causing unbounded memory growth in the network process.
Attachments
Chris Dumez
Comment 1 2023-08-03 16:36:46 PDT
Chris Dumez
Comment 2 2023-08-03 16:56:09 PDT
EWS
Comment 3 2023-08-04 11:41:42 PDT
Committed 266594@main (177d6881d88d): <https://commits.webkit.org/266594@main> Reviewed commits have been landed. Closing PR #16375 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.