Tools/TestWebKitAPI/Tests/WTF/WeakPtr.cpp
@@ -2888,6 +2888,100 @@ TEST(WTF_ThreadSafeWeakPtr, ThreadSafeWeakHashSet)
     EXPECT_EQ(ThreadSafeInstanceCounter::instanceCount, 0u);
 }
 
+class ObjectAddingAndRemovingItself : public ThreadSafeRefCountedAndCanMakeThreadSafeWeakPtr<ObjectAddingAndRemovingItself> {
+public:
+    static Ref<ObjectAddingAndRemovingItself> create(ThreadSafeWeakHashSet<ObjectAddingAndRemovingItself>& set)
+    {
+        return adoptRef(*new ObjectAddingAndRemovingItself(set));
+    }
+
+    ~ObjectAddingAndRemovingItself()
+    {
+        EXPECT_TRUE(m_set.contains(*this));
+        m_set.remove(*this);
+        EXPECT_FALSE(m_set.contains(*this));
+    }
+
+private:
+    ObjectAddingAndRemovingItself(ThreadSafeWeakHashSet<ObjectAddingAndRemovingItself>& set)
+        : m_set(set)
+    {
+        EXPECT_FALSE(m_set.contains(*this));
+        m_set.add(*this);
+        EXPECT_TRUE(m_set.contains(*this));
+    }
+
+    ThreadSafeWeakHashSet<ObjectAddingAndRemovingItself>& m_set;
+};
+
+TEST(WTF_ThreadSafeWeakPtr, ThreadSafeWeakHashSetRemoveOnDestruction)
+{
+    ThreadSafeWeakHashSet<ObjectAddingAndRemovingItself> set;
+    Vector<Ref<ObjectAddingAndRemovingItself>> objects;
+    for (int i = 0; i < 10; ++i)
+        objects.append(ObjectAddingAndRemovingItself::create(set));
+    unsigned setSize = 0;
+    set.forEach([&](auto& object) { ++setSize; });
+    EXPECT_EQ(setSize, 10u);
+
+    objects.removeLast();
+    setSize = 0;
+    set.forEach([&](auto& object) { ++setSize; });
+    EXPECT_EQ(setSize, 9u);
+
+    objects.clear();
+    setSize = 0;
+    set.forEach([&](auto& object) { ++setSize; });
+    EXPECT_EQ(setSize, 0u);
+}
+
+class ObjectAddingItselfOnly : public ThreadSafeRefCountedAndCanMakeThreadSafeWeakPtr<ObjectAddingAndRemovingItself> {
+public:
+    static Ref<ObjectAddingItselfOnly> create(ThreadSafeWeakHashSet<ObjectAddingItselfOnly>& set)
+    {
+        return adoptRef(*new ObjectAddingItselfOnly(set));
+    }
+
+private:
+    ObjectAddingItselfOnly(ThreadSafeWeakHashSet<ObjectAddingItselfOnly>& set)
+        : m_set(set)
+    {
+        m_set.add(*this);
+    }
+
+    ThreadSafeWeakHashSet<ObjectAddingItselfOnly>& m_set;
+};
+
+TEST(WTF_ThreadSafeWeakPtr, ThreadSafeWeakHashAmortizedCleanupWhenOnlyAdding)
+{
+    struct Struct : ThreadSafeRefCountedAndCanMakeThreadSafeWeakPtr<Struct> {
+        Struct() = default;
+    };
+
+    ThreadSafeWeakHashSet<Struct> set;
+    for (int i = 0; i < 10000; ++i) {
+        auto obj = adoptRef(*new Struct);
+        set.add(obj.get());
+    }
+    EXPECT_LT(set.sizeIncludingEmptyEntriesForTesting(), 1000u);
+}
+
+// The test passes if it doesn't time out.
+TEST(WTF_ThreadSafeWeakPtr, AmortizedCleanupNotQuadratic)
+{
+    struct Struct : ThreadSafeRefCountedAndCanMakeThreadSafeWeakPtr<Struct> {
+        Struct() = default;
+    };
+
+    ThreadSafeWeakHashSet<Struct> set;
+    HashSet<Ref<Struct>> strongSet;
+    for (int i = 0; i < 1000000; ++i) {
+        auto obj = adoptRef(*new Struct);
+        set.add(obj.get());
+        strongSet.add(WTFMove(obj));
+    }
+}
+
 TEST(WTF_ThreadSafeWeakPtr, MultipleInheritance)
 {
     enum class Destructor : uint8_t { Cat, Dog, CatDog };
